crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_heading_with_bold_prefix.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
### Option 4: Keep Core but migrate from mdadm/ext4 to ZFS



─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal                                                     1:1 100%
