crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_headings.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
# Title
## Section
### Subsection
Body text follows.




─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
