crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_horizontal_rule.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
Before the rule.

───

After the rule.

─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
