crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_inline_emphasis.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
Use bold for emphasis, italic for nuance, code for
symbols, and strike to retract.


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
