crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_table.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
┏━━━━━━━━━━┳━━━━━━━━┳━━━━━━━━━━━┓
┃ feature  ┃ status ┃ notes     ┃
┣━━━━━━━━━━╋━━━━━━━━╋━━━━━━━━━━━┫
┃ parser   ┃ done   ┃ streaming ┃
┃ renderer ┃ wip    ┃ tables    ┃
┗━━━━━━━━━━┻━━━━━━━━┻━━━━━━━━━━━┛


─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
