crates/tui/tests/storybook/snapshots/app_markdown__text_block_markdown_with_code_fence.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
Here's the fix:

fn add(a: i64, b: i64) -> i64 {
    a.checked_add(b).expect("overflow")
}

Done.





─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
